[gd_scene load_steps=3 format=3 uid="uid://dhttesnq1yqp8"]

[ext_resource type="Script" path="res://World.gd" id="1_rhj7d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rpx8o"]
radius = 80.4114

[node name="World" type="Node2D"]
script = ExtResource("1_rhj7d")

[node name="Area2D" type="Area2D" parent="."]
collision_priority = 2.0

[node name="WorldCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_rpx8o")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
